added gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,18 @@
-cpp/.deps
-cpp/Makefile
-cpp/autom4te.cache
-cpp/config.log
-cpp/config.status
-cpp/*.o
-cpp/psk_soft
-
+psk_soft
+.deps/
+Makefile
+Makefile.in
+acinclude.m4
+aclocal.m4
+autom4te.cache/
+config.guess
+config.log
+config.status
+config.sub
+configure
+depcomp
+install-sh
+ltmain.sh
+missing
+*.o
+.md5sums
