--- a/.project
+++ b/.project
@@ -1,35 +1,35 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <projectDescription>
-	<name>psk_soft</name>
-	<comment></comment>
-	<projects>
+  <name>rh.psk_soft</name>
+  <comment/>
+  <projects>
 	</projects>
-	<buildSpec>
-		<buildCommand>
-			<name>gov.redhawk.ide.codegen.jet.cplusplus.builder</name>
-			<arguments>
+  <buildSpec>
+    <buildCommand>
+      <name>gov.redhawk.ide.codegen.jet.cplusplus.builder</name>
+      <arguments>
 			</arguments>
-		</buildCommand>
-		<buildCommand>
-			<name>org.eclipse.cdt.managedbuilder.core.genmakebuilder</name>
-			<triggers>clean,full,incremental,</triggers>
-			<arguments>
+    </buildCommand>
+    <buildCommand>
+      <name>org.eclipse.cdt.managedbuilder.core.genmakebuilder</name>
+      <triggers>clean,full,incremental,</triggers>
+      <arguments>
 			</arguments>
-		</buildCommand>
-		<buildCommand>
-			<name>org.eclipse.cdt.managedbuilder.core.ScannerConfigBuilder</name>
-			<triggers>full,incremental,</triggers>
-			<arguments>
+    </buildCommand>
+    <buildCommand>
+      <name>org.eclipse.cdt.managedbuilder.core.ScannerConfigBuilder</name>
+      <triggers>full,incremental,</triggers>
+      <arguments>
 			</arguments>
-		</buildCommand>
-	</buildSpec>
-	<natures>
-		<nature>org.python.pydev.pythonNature</nature>
-		<nature>gov.redhawk.ide.natures.scaproject</nature>
-		<nature>gov.redhawk.ide.natures.sca.component</nature>
-		<nature>org.eclipse.cdt.core.cnature</nature>
-		<nature>org.eclipse.cdt.core.ccnature</nature>
-		<nature>org.eclipse.cdt.managedbuilder.core.managedBuildNature</nature>
-		<nature>org.eclipse.cdt.managedbuilder.core.ScannerConfigNature</nature>
-	</natures>
+    </buildCommand>
+  </buildSpec>
+  <natures>
+    <nature>org.python.pydev.pythonNature</nature>
+    <nature>gov.redhawk.ide.natures.scaproject</nature>
+    <nature>gov.redhawk.ide.natures.sca.component</nature>
+    <nature>org.eclipse.cdt.core.cnature</nature>
+    <nature>org.eclipse.cdt.core.ccnature</nature>
+    <nature>org.eclipse.cdt.managedbuilder.core.managedBuildNature</nature>
+    <nature>org.eclipse.cdt.managedbuilder.core.ScannerConfigNature</nature>
+  </natures>
 </projectDescription>
