--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <projectDescription>
-  <name>rh.psk_soft</name>
+  <name>rh.PskSoft</name>
   <comment/>
   <projects>
 	</projects>
