--- a/cpp/configure.ac
+++ b/cpp/configure.ac
@@ -2,14 +2,14 @@
 # This file is protected by Copyright. Please refer to the COPYRIGHT file
 # distributed with this source distribution.
 #
-# This file is part of REDHAWK psk_soft.
+# This file is part of REDHAWK PskSoft.
 #
-# REDHAWK psk_soft is free software: you can redistribute it and/or modify it
+# REDHAWK PskSoft is free software: you can redistribute it and/or modify it
 # under the terms of the GNU Lesser General Public License as published by the
 # Free Software Foundation, either version 3 of the License, or (at your
 # option) any later version.
 #
-# REDHAWK psk_soft is distributed in the hope that it will be useful, but WITHOUT
+# REDHAWK PskSoft is distributed in the hope that it will be useful, but WITHOUT
 # ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 # FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public License
 # for more details.
@@ -17,7 +17,7 @@
 # You should have received a copy of the GNU Lesser General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses/.
 #
-AC_INIT(rh.psk_soft, 2.0.0)
+AC_INIT(rh.PskSoft, 2.0.0)
 AM_INIT_AUTOMAKE([nostdinc foreign])
 AC_CONFIG_MACRO_DIR([m4])
 
